@@ -1,6 +1,7 @@
 v 0.7.1 (30 June 2017)
 - Updated Jenkins repo URL
 - Added ability to exclude changes to Jenkins plugins+configuration
+- Added configurable NTP server support
 
 v 0.7.0 (30 June 2017)
 - Baseline
